[package]
name = "kvs"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.13", features = ["derive"] }
tempfile = "3.0.7"
walkdir = "2.2.7"
anyhow = "1.0.53"
serde = { version = "1.0.117", features = ["derive"] }
bincode = " 1.3.3"
serde_json = "1.0"