[package]
name = "kvs"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.3"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.13", features = ["derive"] }
tempfile = "3.0.7"
walkdir = "2.2.7"
anyhow = "1.0.53"
thiserror = "1.0.30"
serde = { version = "1.0.117", features = ["derive"] }
bincode = " 1.3.3"
serde_json = "1.0"
log = "0.4.0"
env_logger = "0.8.4"